gitops/components/argocd-agent-spoke/argocd-agent-chart.yaml
---
# Source: redhat-argocd-agent/templates/agent-healthz-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
      app.kubernetes.io/name: argocd-agent-agent
      app.kubernetes.io/part-of: argocd-agent
      app.kubernetes.io/component: agent
  name: argocd-agent-healthz
  namespace: argocd-agent
spec:
  ports:
    - name: healthz
      protocol: TCP
      port: 8002
      targetPort: 8002
  selector:
    app.kubernetes.io/name: argocd-agent-agent
---
# Source: redhat-argocd-agent/templates/agent-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
      app.kubernetes.io/name: argocd-agent-agent
      app.kubernetes.io/part-of: argocd-agent
      app.kubernetes.io/component: agent
  name: argocd-agent-metrics
  namespace: argocd-agent
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 8181
      targetPort: 8181
  selector:
    app.kubernetes.io/name: argocd-agent-agent
---
# Source: redhat-argocd-agent/templates/agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: argocd-agent-agent
    app.kubernetes.io/part-of: argocd-agent
    app.kubernetes.io/component: agent
  name: argocd-agent
  namespace: argocd-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-agent-agent
      app.kubernetes.io/part-of: argocd-agent
      app.kubernetes.io/component: agent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-agent-agent
        app.kubernetes.io/part-of: argocd-agent
        app.kubernetes.io/component: agent
    spec:
      containers:
        - args:
            - agent
          name: argocd-agent-agent
          image: "registry.redhat.io/openshift-gitops-1/argocd-agent-rhel8:v1.19.1"
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: metrics
            - containerPort: 8002
              name: healthz
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: healthz
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          securityContext:
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: userpass-passwd
              mountPath: /app/config/creds
      serviceAccountName: argocd-agent-sa
      volumes:
      - name: userpass-passwd
        secret:
          secretName: argocd-agent-agent-userpass
          items:
          - key: credentials
            path: userpass.creds
          optional: true
